--- a/frontend/doctor.html
+++ b/frontend/doctor.html
@@ -7,6 +7,7 @@
 
   <!-- UIcons -->
   <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css">
+  <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css">
 <!-- CSS -->
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/components.css">
@@ -16,6 +17,8 @@
 
 <!-- JS -->
 <script src="js/i18n.js"></script>
+  <script src="js/api.js"></script>
+  <script src="js/ui.js"></script>
 <script src="js/nav.js"></script>
 <script type="module" src="js/main.js"></script>
 <script src="js/bottom-bar.js"></script>
@@ -43,7 +46,8 @@
       <li><a href="doctors.html" data-i18n="qa_doctors">Doctors</a></li>
       <li><a href="specialties.html" data-i18n="qa_specialties">Specialties</a></li>
       <li><a href="labs.html" data-i18n="qa_lab">Lab Tests</a></li>
-      <li><a href="pharmacy.html" data-i18n="qa_pharmacy">Pharmacy</a></li>
+      <li><a href="request-quote.html" data-i18n="qa_request_quote">Request Quote</a></li>
+
       <li><a href="portal.html" data-i18n="qa_portal">Dashboard</a></li>
       <li><a href="about.html" data-i18n="link_about">About</a></li>
       <li><a href="contact.html" data-i18n="nav_contact">Contact</a></li>
@@ -73,18 +77,19 @@
         <h3 data-i18n="footer_links">Quick Links</h3>
         <ul>
           <li><a href="index.html#about" data-i18n="link_about">About</a></li>
+          <li><a href="contact.html" data-i18n="nav_contact">Contact</a></li>
           <li><a href="specialties.html" data-i18n="qa_specialties">Specialties</a></li>
           <li><a href="doctors.html" data-i18n="qa_doctors">Doctors</a></li>
-          <li><a href="labs.html" data-i18n="qa_lab">Labs</a></li>
-          <li><a href="pharmacy.html" data-i18n="qa_pharmacy">Pharmacy</a></li>
+          <li><a href="labs.html" data-i18n="qa_lab">Lab Tests</a></li>
+          <li><a href="request-quote.html" data-i18n="qa_request_quote">Request Quote</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h3 data-i18n="footer_follow">Follow Us</h3>
         <div class="footer-socials">
-          <a href="#"><i class="fi fi-rr-facebook"></i></a>
-          <a href="#"><i class="fi fi-rr-linkedin"></i></a>
-          <a href="#"><i class="fi fi-rr-instagram"></i></a>
+          <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook"><i class="fi fi-brands-facebook"></i></a>
+          <a href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fi fi-brands-linkedin"></i></a>
+          <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram"><i class="fi fi-brands-instagram"></i></a>
         </div>
       </div>
     </div>
@@ -96,12 +101,13 @@
   </footer>
 
   <!-- JS -->
-  <script src="js/i18n.js"></script>
-  <script src="js/nav.js"></script>
+  
+  
   <script>
     // Get doctor ID from URL
     const params = new URLSearchParams(window.location.search);
     const doctorId = params.get("id");
+    const DEFAULT_AVATAR = "assets/img/default_avatar.jpg";
 
     // Load doctor data
     fetch("data/doctors.json")
@@ -111,9 +117,10 @@
         const profile = document.getElementById("doctorProfile");
 
         if (doctor) {
+          const avatar = doctor.photo || DEFAULT_AVATAR;
           profile.innerHTML = `
             <div class="doctor-card profile-view">
-              <img src="${doctor.photo}" alt="${doctor.name}" class="doctor-photo">
+              <img src="${avatar}" alt="${doctor.name}" class="doctor-photo" onerror="this.onerror=null;this.src='${DEFAULT_AVATAR}';">
               <h2>${doctor.name}</h2>
               <p><strong>${doctor.specialty}</strong></p>
               <p>${doctor.bio}</p>
@@ -131,3 +138,13 @@
   </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
