--- a/frontend/specialties.html
+++ b/frontend/specialties.html
@@ -7,6 +7,7 @@
 
   <!-- UIcons -->
   <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css">
+  <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css">
 <!-- CSS -->
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/components.css">
@@ -16,6 +17,8 @@
 
 <!-- JS -->
 <script src="js/i18n.js"></script>
+  <script src="js/api.js"></script>
+  <script src="js/ui.js"></script>
 <script src="js/nav.js"></script>
 <script type="module" src="js/main.js"></script>
 <script src="js/bottom-bar.js"></script>
@@ -45,7 +48,8 @@
     <li><a href="doctors.html" data-i18n="qa_doctors">Doctors</a></li>
     <li><a href="specialties.html" data-i18n="qa_specialties">Specialties</a></li>
     <li><a href="labs.html" data-i18n="qa_lab">Lab Tests</a></li>
-    <li><a href="pharmacy.html" data-i18n="qa_pharmacy">Pharmacy</a></li>
+    <li><a href="request-quote.html" data-i18n="qa_request_quote">Request Quote</a></li>
+
     <li><a href="portal.html" data-i18n="qa_portal">Dashboard</a></li>
     <li><a href="about.html" data-i18n="link_about">About</a></li>
     <li><a href="contact.html" data-i18n="nav_contact">Contact</a></li>
@@ -94,15 +98,15 @@
 <nav class="mc-bottom-bar" role="navigation" aria-label="Quick actions">
   <a href="appointment.html" class="mc-tab" aria-label="Book an appointment">
     <i class="fi fi-rr-calendar mc-ico"></i>
-    <span class="mc-lbl" data-i18n="cta_book">Book</span>
+    <span class="mc-lbl" data-i18n="btn_book">Book</span>
   </a>
   <a href="doctors.html" class="mc-tab" aria-label="Find a doctor">
     <i class="fi fi-rr-stethoscope mc-ico"></i>
-    <span class="mc-lbl" data-i18n="link_find_doctor">Doctors</span>
+    <span class="mc-lbl" data-i18n="qa_doctors">Doctors</span>
   </a>
   <a href="labs.html" class="mc-tab" aria-label="Lab services">
     <i class="fi fi-rr-test-tube mc-ico"></i>
-    <span class="mc-lbl" data-i18n="qa_lab">Labs</span>
+    <span class="mc-lbl" data-i18n="qa_lab">Lab Tests</span>
   </a>
 </nav>
 
@@ -118,19 +122,20 @@
     <div class="footer-col">
       <h3 data-i18n="footer_links">Quick Links</h3>
       <ul>
-        <li><a href="#about" data-i18n="link_about">About</a></li>
-        <li><a href="specialties.html" data-i18n="qa_specialties">Specialties</a></li>
-        <li><a href="doctors.html" data-i18n="qa_doctors">Doctors</a></li>
-        <li><a href="labs.html" data-i18n="qa_lab">Labs</a></li>
-        <li><a href="pharmacy.html" data-i18n="qa_pharmacy">Pharmacy</a></li>
-      </ul>
+          <li><a href="#about" data-i18n="link_about">About</a></li>
+          <li><a href="contact.html" data-i18n="nav_contact">Contact</a></li>
+          <li><a href="specialties.html" data-i18n="qa_specialties">Specialties</a></li>
+          <li><a href="doctors.html" data-i18n="qa_doctors">Doctors</a></li>
+          <li><a href="labs.html" data-i18n="qa_lab">Lab Tests</a></li>
+          <li><a href="request-quote.html" data-i18n="qa_request_quote">Request Quote</a></li>
+        </ul>
     </div>
     <div class="footer-col">
       <h3 data-i18n="footer_follow">Follow Us</h3>
       <div class="footer-socials">
-        <a href="#"><i class="fi fi-rr-facebook"></i></a>
-        <a href="#"><i class="fi fi-rr-linkedin"></i></a>
-        <a href="#"><i class="fi fi-rr-instagram"></i></a>
+        <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook"><i class="fi fi-brands-facebook"></i></a>
+        <a href="https://www.linkedin.com" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fi fi-brands-linkedin"></i></a>
+        <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram"><i class="fi fi-brands-instagram"></i></a>
       </div>
     </div>
   </div>
@@ -142,8 +147,18 @@
 </footer>
 
   <!-- JS -->
-  <script src="js/i18n.js"></script>
-  <script src="js/nav.js"></script>
-  <script src="js/bottom-bar.js"></script>
+  
+  
+  
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
